# blake3-py

./: .gitignore  Cargo.toml  README.md  blake3.pyi  build.py  example.py  pyproject.toml  release.md  test.py
.cargo/: config
.github/: dependabot.yml
.github/workflows/: ci.yml  dists.yml  maturin_build_sdist.py  maturin_build_wheel.py  push.yml  tag.yml  tests.yml  twine_upload.py  upload_github_release_asset.py  wheels.yml
c_impl/: .gitignore  README.md  blake3module.c  build.sh  setup.py  spammodule.c
src/: lib.rs
tests/: build.py  example.py  python_info.py  test_blake3.py
