[package]
# `name = "blake3"` is a bit confusing, because that's the same as the official
# Rust implementation that this is wrapping. However, this crate doesn't get
# published to crates.io. Instead, it gets packaged by Maturin and published on
# PyPI. Installing this with `pip install blake3` is better than something
# redundant like `pip install PyBLAKE3-py`.
name = "blake3"
version = "0.1.5"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "Python bindings for the Rust blake3 crate"
repository = "https://github.com/oconnor663/blake3-py"
homepage = "https://github.com/oconnor663/blake3-py"
license = "CC0-1.0 OR Apache-2.0"
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
blake3 = { version = "0.3.0", features = ["rayon"] }
pyo3 = { version = "0.9.2", features = ["extension-module"] }
arrayref = "0.3.6"
hex = "0.4.2"
