[package]
name = "blake3_py"
version = "0.2.1"
authors = ["Jack O'Connor <oconnor663@gmail.com>"]
description = "Python bindings for the Rust blake3 crate"
repository = "https://github.com/oconnor663/blake3-py"
homepage = "https://github.com/oconnor663/blake3-py"
license = "CC0-1.0 OR Apache-2.0"
readme = "README.md"
edition = "2021"

[lib]
name = "blake3"
crate-type = ["cdylib"]

[features]
neon = ["blake3/neon"]

[dependencies]
blake3 = { version = "1.0.0", features = ["rayon"] }
pyo3 = { version = "0.15", features = ["extension-module"] }
hex = "0.4.2"
rayon = "1.2.1"
